<resources>
    <string name="facebook_app_id">3028016427294198</string>
    <string name="fb_login_protocol_scheme">fb3028016427294198</string>
    <string name="app_name">Instapetts</string>
    <string name="config">Configurar</string>
    <string name="next">Siguiente</string>
    <string name="exit">Salir</string>
    <string name="acept_next">Aceptar</string>
    <string name="counter_label_text_constructor" formatted="false">%s%s%s%s</string>
    <string name="text_imagepicker_album_all_key">all</string>
    <string name="permision_storage">Permisos de Almacenamientos Requeridos</string>
    <string name="permision_storage_body">Para mejorar la experiencia en Instapetts necesitamos tu permiso para acceder a tu almacenamiento.</string>
    <string name="text_imagepicker_permission_denied_external_storage">Please grant the permission to show media.</string>
<string name="pet_type_dog">Perro</string>
<string name="pet_type_cat">Gato</string>
<string name="pet_type_ave">Ave</string>
<string name="pet_type_conejo">Conejo</string>
<string name="pet_type_hamster">Hamster</string>
    <string name="reptil">Reptil</string>
<string name="pet_type_otro">Otro</string>
    <string name="pez">Marinos</string>
    <string name="bovinos">Bovinos</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Eliminar</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="title_activity_scan_qr_code">Scan</string>
    <string name="qc_code_close">Close</string>
    <string name="qr_code_select_picture">Picture</string>
    <string name="qr_code_open_flash_light">Open flash light</string>
    <string name="qr_code_close_flash_light">Close Flash Light</string>
    <string name="qr_code_auto_scan_notification">Position QR Code</string>
    <string name="qr_code_notification">Notification</string>
    <string name="qr_code_camera_not_open">Could not open your camera</string>
    <string name="qr_code_positive_button_know">OK</string>
    <string name="qr_code_positive_button_confirm">Confirm</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">Could not read your image.Try another image~</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">Sorry, could not open scan content</string>
    <string name="qr_code_camera_not_found">Could not detect camera</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="Ok">Ok</string>
    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="label_select_video">Select Video</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="title_description">A library with UI and mechanisms to trim local videos on Android applications</string>
    <string name="description_app">
            # Provide UI to preview and select start/end of the video to trim
        \n\n# Thumbnails with frame by frame overview of the video
        \n\n# Works with gallery and recorded videos
    </string>
    <string name="pick_a_video">Select or record a a video below to try it out:</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="video_shoot_tip">Drag to select the segment within %d second that you want to post！</string>
    <string name="users">Usuarios</string>
    <string name="pets">Mascotas</string>
    <string name="search">Buscar...</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_instapettv">Tv</string>
    <string name="nav_tips">Tips</string>
    <string name="nav_search">Buscar</string>
    <string name="nav_perfil">Yo</string>
    <string name="intro_title_1">Son especiales y lo sabemos</string>
    <string name="intro_body_1">Por eso creamos Instapetts para ti, que amas a tu mascotas</string>
    <string name="intro_title_2">Disfruta el momento</string>
    <string name="intro_body_2">No olvides compartir cada instante con tu mascota.</string>
    <string name="intro_title_3">Siempre para ti</string>
    <string name="intro_body_3">Instapetts siempre estará para ti, inmortaliza los momentos, vive instantes únicos y muéstranos las mejores risas con tus mascotas.</string>
    <string name="chose_photo">Elige una foto</string>
    <string name="write_name">Escribe tu nombre...</string>
    <string name="write_name_pet">Escribe un nombre...</string>
    <string name="write_description">Escribe algo sobre ti...</string>
    <string name="label_config_user">Configura tu usuario</string>
    <string name="no_geocoder_available">No geocoder disponible</string>
    <string name="no_address_found">Algun lugar del mundo</string>
    <string name="address_found">Adrees</string>
    <string name="service_not_available">Servicio no disponible</string>
    <string name="invalid_lat_long_used">Invalid LAT LON</string>
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ucrop_error_input_data_is_absent" translatable="false">Both input and output Uri must be specified</string>
    <string name="ucrop_mutate_exception_hint" translatable="false">Therefore, override color resource (ucrop_color_toolbar_widget) in your app to make it work on pre-L devices</string>
    <string name="ucrop_rotate">Rotate</string>
    <string name="ucrop_scale">Scale</string>
    <string name="ucrop_crop">Crop</string>
    <string name="default_time">00:00</string>
    <string name="custom">Custom</string>
    <string name="square">Square</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="_4_3">4:3</string>
    <string name="_16_9">16:9</string>
    <string name="pager_discover">Descubre</string>
    <string name="pager_more_views">Lo más visto</string>
    <string name="pager_adorable">Adorables</string>
    <string name="pager_recent">Lo mas reciente</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="no_account">No tienes una cuenta?</string>
    <string name="mail">Correo</string>
    <string name="login">Entrar</string>
    <string name="register_account">Crear tu cuenta</string>
    <string name="login_or"> o entrar con</string>
    <string name="register">Registrarte</string>
<string name="tip_import">Tip Reelevante</string>
    <string name="tips_notice">Tips y Noticias</string>
    <string name="cosas_interesantes">Cosas interesantes</string>
    <string name="month">mes</string>
    <string name="months">meses</string>
    <string name="day">día</string>
    <string name="days">días</string>
    <string name="year">año</string>
    <string name="years">años</string>
    <string name="week">semana</string>
    <string name="weeks">semanas</string>
    <string name="hour">hora</string>
    <string name="hours">horas</string>
    <string name="now">Justo ahora</string>
    <string name="minute"> minuto</string>
    <string name="minutes"> minutos</string>
    <string name="hace">Hace</string>
    <string name="first_like">Se el primero en darle me gusta</string>
    <string name="first_comment">"Se el primero en hacer un comentario en esta publicacion."</string>
    <string name="no_commnets">No hay comentarios aun.</string>
    <string name="notifications">Notificaciones</string>
    <string name="you_history">Tu Historia</string>
    <string name="add_pet">Agrega una mascota</string>
    <string name="config_pet_step">Configura tu primera mascota para empezar a compartir contenido.</string>
    <string name="add_first_photo">Vamos por tu primera foto!</string>
    <string name="config_fist_foto">Con una mascota lista ya podras empezar a subir contenido.</string>
    <string name="firt_follow_pets">Publicaciones mas recientes...</string>
    <string name="account">Cuenta</string>
    <string name="saved">Guardado</string>
    <string name="post_saved">Publicaciones guardadas</string>
    <string name="share_profile">Compartir tu perfil</string>
    <string name="share">Compartir</string>
    <string name="your_identity">Tu identificacion</string>
    <string name="administrate_account">Administrar tu cuenta</string>
    <string name="general">General</string>
    <string name="center_help">Centro de Hayuda</string>
    <string name="terms">Terminos de uso</string>
    <string name="politicas_privacy">Politica privacidad</string>
    <string name="close_session">Cerrar Session</string>
    <string name="post_private">Post Privados</string>
    <string name="favorite">Favoritos</string>
    <string name="post">Publicaciones</string>
    <string name="new_post">Nueva Publicacion</string>
    <string name="full_comments">Son todos los comentarios</string>
    <string name="likes"> Me gusta</string>
    <string name="title_follow">Nuevo me gusta</string>
    <string name="body_follow"> le ha gustado tu publicación!!!</string>
    <string name="title_comment">Nuevo comentario</string>
    <string name="body_comment">  a comentado tu publicacion, ve de que se trata!!!</string>
    <string name="Followed">Seguidos</string>
    <string name="followers">Seguidores</string>
    <string name="delete_pet_title">Quieres eliminar a tu mascota?</string>
    <string name="delete_pet_body">Recuerda que los perfiles y contenido de tu mascota son tus recuerdos que siempre estaran disponibles para ti en Instappets no necesitas eliminarla definitivamente.</string>
    <string name="people_like_this">personas les gusta esto</string>
    <string name="no_sigues">Aun no sigues a nadie</string>
    <string name="completed">COMPLETADO</string>
    <string name="no_recent_search_title">No hay busquedas recientes</string>
    <string name="no_recent_search_body">No hay busquedas recientes, empieza por buscar a un usuario o mascota de tu preferencia.</string>
    <string name="me_gusta"> Me gusta</string>
    <string name="instapetts_tips">INSTAPETS TIP</string>
    <string name="comentarios">comentarios</string>
    <string name="type_pet">tipo mascota</string>
    <string name="comentar_algo">Comentar algo...</string>
    <string name="coments_desactivated">Comentarios desactivados por el usuario</string>
    <string name="publicar">Publicar</string>
    <string name="raza_not_found">No esta tu tipo de  mascota?</string>
    <string name="solicitar_categoria">Solicitar</string>
    <string name="dialog_create_pet_1">1:Recibe noticias exclusivas para tus mascotas\n</string>
    <string name="dialog_create_pet_2">2:Encuentra contenido interesante segun tus gustos\n</string>
    <string name="dialog_create_pet_3">3:Permite guardar recuerdos de tus mascotas\n</string>
    <string name="dialog_create_pet_4">4: Guarda cualquier tipo de animal en instapetts no hay limites</string>
    <string name="crear">Crear</string>
    <string name="crear_pet">Crear mascota</string>
    <string name="ventajas">Ventajas</string>
    <string name="no_mostrar">No volver a mostrar</string>
</resources>