<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_alignParentBottom="true"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/delete_now_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:elevation="3dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_perro"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <LinearLayout
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/round_white"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="30dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:text="@string/crear_pet"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/ventajas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/dialog_create_pet_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/dialog_create_pet_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/dialog_create_pet_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/dialog_create_pet_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/create_pet_button"
                        android:textSize="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:paddingEnd="40dp"
                        android:paddingStart="40dp"
                        android:background="@drawable/button_gmail"
                        android:text="@string/crear"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <CheckBox
                        android:id="@+id/check_no_mostrar"
                        android:textSize="10dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:text="@string/no_mostrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>



    </RelativeLayout>



</RelativeLayout>