<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:id="@+id/background"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent">
    <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/round_white"
        android:clickable="true">
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/close_dialog"
            android:tint="@color/black"
            android:src="@drawable/ic_cross"
            android:layout_width="15dp"
            android:layout_height="15dp"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_below="@+id/close_dialog"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/close_dialog"
                android:id="@+id/label_shose_pet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/raza_not_found"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp" />
            <EditText
                android:id="@+id/otra_mascota"
                android:fontFamily="@font/avenir_black"
                android:textSize="30dp"
                android:textAlignment="center"
                android:hint="@string/type_pet"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:padding="15dp"
                android:background="#00C0B7B7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/add_other_pet"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false"
                android:text="@string/solicitar_categoria"
                android:textColor="@color/white"
                android:background="@drawable/button_follow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>