<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/back_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/back_to_main"
            android:layout_margin="10dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="15dp"
            app:contentPadding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_cross"
            android:layout_width="12dp"
            android:layout_height="12dp"
            app:tint="@color/black" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:textSize="12dp"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:text="@string/comentarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/corner_line"
        android:id="@+id/divider_top"
        android:layout_below="@+id/back_layout"
        android:layout_width="match_parent"
        android:layout_height="0.5sp"/>
  <androidx.recyclerview.widget.RecyclerView
      android:layout_below="@+id/divider_top"
      android:id="@+id/list_comentarios"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>
    <RelativeLayout
        android:visibility="gone"
        android:layout_below="@+id/divider_top"
        android:layout_above="@+id/separator_comment"
        android:id="@+id/no_comments"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <include layout="@layout/no_data"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/separator_comment"
        android:layout_above="@+id/layout_loanding_comments"
        android:background="@drawable/corner_line"
        android:layout_width="match_parent"
        android:layout_height="0.5sp"/>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/layout_loanding_comments"
        android:padding="8dp"
        android:layout_above="@+id/layout_commentarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_commentarios"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.bunizz.instapetts.utils.ImagenCircular
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:id="@+id/image_user_comment"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"
            android:src="@drawable/ic_holder"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
        <EditText
            android:id="@+id/input_commentarios"
            android:hint="@string/comentar_algo"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="#00FFFFFF"
            android:layout_toRightOf="@+id/image_user_comment"
            android:layout_toLeftOf="@+id/comment_now"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <RelativeLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/comment_now"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="60dp">
            <TextView
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:id="@+id/text_label"
                android:textColor="#CAC7C7"
                android:text="@string/publicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_toRightOf="@+id/image_user_comment"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:id="@+id/desactivate_comments"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:textAlignment="center"
                android:id="@+id/can_comment_label"
                android:text="@string/coments_desactivated"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>

    <com.bunizz.instapetts.utils.ProgressCircle
        android:id="@+id/cirlce_progress"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="40dp"
        android:layout_height="40dp"/>
</RelativeLayout>