<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_bottom_nav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:layout_alignParentBottom="true"
    android:background="#FFFFFF">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="15"
        tools:ignore="DisableBaselineAlignment">
        <RelativeLayout
            android:padding="10dp"
            android:id="@+id/tab_feed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="?attr/selectableItemBackground">
            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/icon_feed_pet"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_home_pet"
                tools:ignore="ContentDescription" />
           <TextView
               android:layout_marginTop="3dp"
               android:textColor="@color/black"
               android:textSize="9dp"
               android:layout_below="@id/icon_feed_pet"
               android:layout_centerHorizontal="true"
               android:text="@string/nav_home"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:padding="10dp"
            android:id="@+id/tap_tips"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="3"
            android:background="?attr/selectableItemBackground">
            <ImageView
                android:rotation="90"
                android:layout_centerHorizontal="true"
                android:id="@+id/icon_tips"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_food_pet"
                tools:ignore="ContentDescription" />
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:textSize="9dp"
                android:layout_below="@id/icon_tips"
                android:layout_centerHorizontal="true"
                android:text="@string/nav_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:padding="5dp"
            android:background="?attr/selectableItemBackground"
            android:id="@+id/tab_add_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            >
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="5dp"
                app:contentPaddingRight="3dp"
                app:contentPaddingLeft="3dp"
                app:cardBackgroundColor="@color/primary"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="#fff"
                        android:layout_width="40dp"
                        android:layout_height="30dp">
                        <ImageView
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:id="@+id/icon_add_image_pet"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_hand_pet_white"
                            tools:ignore="ContentDescription" />
                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:padding="10dp"
            android:id="@+id/tab_search_pet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="3"
            android:background="?attr/selectableItemBackground"
            >
            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/icon_search_pet"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_search"
                tools:ignore="ContentDescription" />
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:textSize="9dp"
                android:layout_below="@id/icon_search_pet"
                android:layout_centerHorizontal="true"
                android:text="@string/nav_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:padding="10dp"
            android:id="@+id/tab_profile_pet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="3"
            android:background="?attr/selectableItemBackground"
            >
            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/icon_profile_pet"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_usuario"
                tools:ignore="ContentDescription" />
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:textSize="9dp"
                android:layout_below="@id/icon_profile_pet"
                android:layout_centerHorizontal="true"
                android:text="@string/nav_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>